dfir_rs/tests/snapshots/surface_fold__fold_sort@graphvis_dot.snap
---
source: dfir_rs/tests/surface_fold.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) None source_stream(items_recv)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) None fold::<'tick>(Vec::new, Vec::push)", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) None flat_map(|mut vec| {\l    vec.sort();\l    vec\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) None for_each(|v| print!(\"{:?}, \", v))", shape=house, fillcolor="#ffff88"]
    n5v1 [label="(n5v1) None handoff", shape=parallelogram, fillcolor="#ddddff"]
    n3v1 -> n4v1
    n2v1 -> n3v1
    n1v1 -> n5v1
    n5v1 -> n2v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n2v1
        n3v1
        n4v1
    }
}
