dfir_rs/tests/snapshots/surface_fold__fold_static_join@graphvis_dot.snap
---
source: dfir_rs/tests/surface_fold.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) fold::<\l    'tick,\l>(\l    || 0,\l    |old: &mut usize, _: usize| {\l        *old += 1;\l    },\l)\l", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) tee()", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) for_each(|_| {})", shape=house, fillcolor="#ffff88"]
    n5v1 [label="(n5v1) source_stream(items_recv)", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) cross_join_multiset()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) for_each(|v| result_send.send(v).unwrap())", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n3v1
    n1v1 -> n2v1
    n3v1 -> n4v1
    n3v1 -> n8v1
    n5v1 -> n6v1 [label="0"]
    n6v1 -> n7v1
    n8v1 -> n6v1 [label="1"]
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        n4v1
        subgraph sg_1v1_var_teed_fold {
            cluster=true
            label="var teed_fold"
            n1v1
            n2v1
            n3v1
        }
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1"
        n5v1
        n7v1
        subgraph sg_2v1_var_join_node {
            cluster=true
            label="var join_node"
            n6v1
        }
    }
}
