dfir_rs/tests/snapshots/surface_fold__fold_static_join@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_fold.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([])</code>"/]:::pullClass
2v1[\"<div style=text-align:center>(2v1)</div> <code>fold::&lt;<br>    'tick,<br>&gt;(<br>    || 0,<br>    |old: &amp;mut usize, _: usize| {<br>        *old += 1;<br>    },<br>)</code>"/]:::pullClass
3v1[/"(3v1) <code>tee()</code>"\]:::pushClass
4v1[/"(4v1) <code>for_each(|_| {})</code>"\]:::pushClass
5v1[\"(5v1) <code>source_stream(items_recv)</code>"/]:::pullClass
6v1[\"(6v1) <code>cross_join_multiset()</code>"/]:::pullClass
7v1[/"(7v1) <code>for_each(|v| result_send.send(v).unwrap())</code>"\]:::pushClass
8v1["(8v1) <code>handoff</code>"]:::otherClass
9v1["(9v1) <code>handoff</code>"]:::otherClass
2v1-->3v1
1v1-->8v1
3v1-->4v1
3v1-->9v1
5v1-->|0|6v1
6v1-->7v1
8v1--x2v1; linkStyle 6 stroke:red
9v1-->|1|6v1
subgraph sg_1v1 ["sg_1v1"]
    subgraph sg_1v1_var_teed_fold ["var <tt>teed_fold</tt>"]
        1v1
    end
end
subgraph sg_2v1 ["sg_2v1"]
    4v1
    subgraph sg_2v1_var_teed_fold ["var <tt>teed_fold</tt>"]
        2v1
        3v1
    end
end
subgraph sg_3v1 ["sg_3v1"]
    5v1
    7v1
    subgraph sg_3v1_var_join_node ["var <tt>join_node</tt>"]
        6v1
    end
end
